# project-euler

./: README.md  project-euler.cabal
scripts/: NewProblem.hs
src/ProjectEuler/: Prelude.hs  Problem001.hs  Problem002.hs  Problem003.hs  Problem004.hs  Problem005.hs  Problem006.hs  Problem007.hs  Problem008.hs  Problem009.hs  Problem010.hs  Problem011.hs  Problem012.hs  Problem013.hs  Problem014.hs  Problem015.hs  Problem016.hs  Problem017.hs  Problem019.hs  Problem020.hs  Problem021.hs  Problem022.hs  Problem024.hs  Problem048.hs
test/ProjectEuler/: Problem001Spec.hs  Problem002Spec.hs  Problem003Spec.hs  Problem004Spec.hs  Problem005Spec.hs  Problem006Spec.hs  Problem007Spec.hs  Problem008Spec.hs  Problem009Spec.hs  Problem010Spec.hs  Problem011Spec.hs  Problem012Spec.hs  Problem013Spec.hs  Problem014Spec.hs  Problem015Spec.hs  Problem016Spec.hs  Problem017Spec.hs  Problem019Spec.hs  Problem020Spec.hs  Problem021Spec.hs  Problem022Spec.hs  Problem024Spec.hs  Problem048Spec.hs
