name:                project-euler
version:             0.1.0.0
synopsis:            Project Euler
description:         Please see README.md
homepage:            https://github.com/hachibu/project-euler#readme
license:             MIT
license-file:        LICENSE
author:              Ray Sohn
maintainer:          raymondsohn@example.com
copyright:           2016 Ray Sohn
category:            Math
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: https://github.com/hachibu/project-euler

library
  hs-source-dirs:      src
  exposed-modules:     ProjectEuler.Prelude
                     , ProjectEuler.Problem001
                     , ProjectEuler.Problem002
                     , ProjectEuler.Problem003
                     , ProjectEuler.Problem004
                     , ProjectEuler.Problem005
                     , ProjectEuler.Problem006
                     , ProjectEuler.Problem007
                     , ProjectEuler.Problem008
                     , ProjectEuler.Problem009
                     , ProjectEuler.Problem010
                     , ProjectEuler.Problem011
                     , ProjectEuler.Problem012
                     , ProjectEuler.Problem013
                     , ProjectEuler.Problem014
                     , ProjectEuler.Problem015
                     , ProjectEuler.Problem016
                     , ProjectEuler.Problem017
                     , ProjectEuler.Problem019
                     , ProjectEuler.Problem020
  build-depends:       base
                     , matrix
                     , parallel
                     , primes
                     , time
                     , vector
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite project-euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project-euler
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
