name:                project-euler
version:             0.1.0.0
synopsis:            Project Euler
description:         Please see README.
homepage:            https://github.com/hachibu/project-euler#readme
license:             MIT
license-file:        LICENSE
author:              hachibu
maintainer:          hachibu <raymondsohn@example.com>
copyright:           2018 hachibu
category:            Math
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: https://github.com/hachibu/project-euler

library
  hs-source-dirs:      src
  exposed-modules:     ProjectEuler.Prelude
                     , ProjectEuler.Problem001
                     , ProjectEuler.Problem002
                     , ProjectEuler.Problem003
                     , ProjectEuler.Problem004
                     , ProjectEuler.Problem005
                     , ProjectEuler.Problem006
                     , ProjectEuler.Problem007
                     , ProjectEuler.Problem008
                     , ProjectEuler.Problem009
                     , ProjectEuler.Problem010
                     , ProjectEuler.Problem011
                     , ProjectEuler.Problem012
                     , ProjectEuler.Problem013
                     , ProjectEuler.Problem014
                     , ProjectEuler.Problem015
                     , ProjectEuler.Problem016
                     , ProjectEuler.Problem017
                     , ProjectEuler.Problem019
                     , ProjectEuler.Problem020
                     , ProjectEuler.Problem021
                     , ProjectEuler.Problem022
                     , ProjectEuler.Problem024
                     , ProjectEuler.Problem048
  build-depends:       base
                     , matrix
                     , parallel
                     , primes
                     , time
                     , vector
  ghc-options:         -Wall -Werror -O2
  default-language:    Haskell2010

test-suite project-euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ProjectEuler.Problem001Spec
                     , ProjectEuler.Problem002Spec
                     , ProjectEuler.Problem003Spec
                     , ProjectEuler.Problem004Spec
                     , ProjectEuler.Problem005Spec
                     , ProjectEuler.Problem006Spec
                     , ProjectEuler.Problem007Spec
                     , ProjectEuler.Problem008Spec
                     , ProjectEuler.Problem009Spec
                     , ProjectEuler.Problem010Spec
                     , ProjectEuler.Problem011Spec
                     , ProjectEuler.Problem012Spec
                     , ProjectEuler.Problem013Spec
                     , ProjectEuler.Problem014Spec
                     , ProjectEuler.Problem015Spec
                     , ProjectEuler.Problem016Spec
                     , ProjectEuler.Problem017Spec
                     , ProjectEuler.Problem019Spec
                     , ProjectEuler.Problem020Spec
                     , ProjectEuler.Problem021Spec
                     , ProjectEuler.Problem022Spec
                     , ProjectEuler.Problem024Spec
                     , ProjectEuler.Problem048Spec
  build-depends:       base
                     , project-euler
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -Werror -O2
  default-language:    Haskell2010
